# bread-backup

./: .gitignore  HIZLIBASLANGIC.md  INSTALL.md  KULLANIM.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCENARIO.md  pyproject.toml
.claude/: settings.local.json
bread_backup/: __init__.py  __main__.py  cli.py
bread_backup/collectors/: config_files.py  packages.py
bread_backup/core/: backup.py  metadata.py  restore.py
bread_backup/restorers/: config_files.py  packages.py
bread_backup/storage/: local.py
bread_backup/utils/: exclude.py  permissions.py
configs/: default_exclude.txt
