[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bread-backup"
version = "0.1.0"
description = "A comprehensive backup and restore tool for Arch Linux systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bread Backup Contributors"}
]
keywords = ["backup", "restore", "arch", "linux", "system"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cloud = [
    "google-api-python-client>=2.80.0",
    "dropbox>=11.36.0",
    "boto3>=1.26.0",
]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bread-backup = "bread_backup.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/bread-backup"
Repository = "https://github.com/yourusername/bread-backup"
Issues = "https://github.com/yourusername/bread-backup/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bread_backup*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=bread_backup",
    "--cov-report=term-missing",
    "--cov-report=html",
]
